# MR_25_18

./: .gitignore  .gitmodules  README.md  clone_repos.sh  exec.sh  run.sh  run_hydra.sh
docker_ws/: Dockerfile.MR_25_18  build_MR_25_18.sh
hydra_ws/: colcon_defaults.yaml
hydra_ws/src/: configure.yaml
hydra_ws/src/hydra_tb3/: CMakeLists.txt  package.xml
hydra_ws/src/hydra_tb3/config/: hydra_tb3.yaml
hydra_ws/src/hydra_tb3/config/datasets/: house.yaml
hydra_ws/src/hydra_tb3/label_spaces/: house.yaml
hydra_ws/src/hydra_tb3/launch/: hydra_tb3.launch.yaml
ros_ws/: colcon_defaults.yaml  frames_2025-12-30_14.17.47.gv
ros_ws/install/: local_setup.sh  setup.sh
ros_ws/install/config_utilities/share/config_utilities/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros_ws/install/ianvs/lib/ianvs/: merge_rosbags  (+2 more)
ros_ws/install/kimera_pgmo_rviz/share/kimera_pgmo_rviz/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros_ws/install/kimera_pgmo_rviz/share/kimera_pgmo_rviz/cmake/: ament_cmake_export_targets-extras.cmake  kimera_pgmo_rviz-targetsExport-release.cmake  kimera_pgmo_rviz-targetsExport.cmake  kimera_pgmo_rvizConfig.cmake
ros_ws/log/: latest_build
ros_ws/src/ianvs/: .clang-format  .cmake-format.yaml  LICENSE  README.md
ros_ws/src/ianvs/ianvs/: CMakeLists.txt  package.xml  plugins.xml  setup.cfg
ros_ws/src/ianvs/ianvs/app/: merge_rosbags.cpp  play_rosbag.cpp  transform_file_broadcaster.cpp
ros_ws/src/ianvs/ianvs/ianvs/: __init__.py  launch.py
ros_ws/src/ianvs/ianvs/include/ianvs/: bag_reader.h  node_handle.h  spin_functions.h
ros_ws/src/ianvs/ianvs/include/ianvs/bindings/: image_encodings.h
ros_ws/src/ianvs/ianvs/include/ianvs/detail/: string_transforms.h
ros_ws/src/ianvs/ianvs/src/: bag_reader.cpp  image_publisher.cpp  image_subscription.cpp  node_handle.cpp  node_handle_factory.cpp  node_init.cpp  spin_functions.cpp
ros_ws/src/ianvs/ianvs/src/app/: signal_stop_plugin.cpp  tf_plugin.cpp  topic_remap_plugin.cpp
ros_ws/src/ianvs/ianvs/src/bindings/: image_encodings.cpp  module.cpp
ros_ws/src/ianvs/ianvs/src/detail/: string_transforms.cpp
ros_ws/src/install/: local_setup.sh  setup.sh
ros_ws/src/kimera_pgmo/: README.md
ros_ws/src/kimera_pgmo/install/: kimera_pgmo_https.rosinstall  kimera_pgmo_ssh.rosinstall
ros_ws/src/kimera_pgmo/kimera_pgmo/: CMakeLists.txt
ros_ws/src/kimera_pgmo/kimera_pgmo_msgs/: CMakeLists.txt
ros_ws/src/kimera_pgmo/kimera_pgmo_msgs/msg/: Mesh.msg
ros_ws/src/kimera_pgmo/kimera_pgmo_msgs/srv/: MeshDeltaQuery.srv
ros_ws/src/kimera_pgmo/kimera_pgmo_ros/: CMakeLists.txt  package.xml
ros_ws/src/kimera_pgmo/kimera_pgmo_ros/app/: kimera_pgmo_node.cpp  mesh_frontend_node.cpp  mesh_publisher_node.cpp
ros_ws/src/kimera_pgmo/kimera_pgmo_ros/include/kimera_pgmo_ros/: kimera_pgmo.h  mesh_frontend.h  ros_log_sink.h  visualization_functions.h
ros_ws/src/kimera_pgmo/kimera_pgmo_ros/include/kimera_pgmo_ros/conversion/: gtsam.h  mesh.h  mesh_delta.h
ros_ws/src/kimera_pgmo/kimera_pgmo_ros/launch/: kimera_pgmo.launch  kimera_pgmo_robot.launch  mesh_deformer.launch
ros_ws/src/kimera_pgmo/kimera_pgmo_ros/src/: kimera_pgmo.cpp  mesh_frontend.cpp  visualization_functions.cpp
ros_ws/src/kimera_pgmo/kimera_pgmo_ros/src/conversion/: gtsam.cpp  mesh.cpp  mesh_delta.cpp
ros_ws/src/kimera_pgmo/kimera_pgmo_ros/test/: CMakeLists.txt  test_gtsam_conversions.cpp  test_kimera_pgmo.cpp  test_mesh_conversion.cpp
ros_ws/src/kimera_pgmo/kimera_pgmo_rviz/: CMakeLists.txt  rviz_common_plugins.xml
ros_ws/src/kimera_pgmo/kimera_pgmo_rviz/include/kimera_pgmo_rviz/: mesh_display.h  mesh_visual.h  tf_event_buffer.h
ros_ws/src/kimera_pgmo/kimera_pgmo_rviz/src/: mesh_display.cpp  mesh_visual.cpp  tf_event_buffer.cpp  visibility_field.cpp  visuals_map.cpp
ros_ws/src/kimera_rpgo/: CMakeLists.txt  README.md  package.xml  pyproject.toml
ros_ws/src/kimera_rpgo/experiments/: add_corrupt_odometry.py  comparison_experiment.py  generate_outliers.py  generate_summary_table.py  metric_utils.py  perturb_pose_graph.py  remove_outliers.py  scan_utils.py  simple_example.py  utils.py  viz_g2o.py  viz_robust_loss.py
ros_ws/src/kimera_rpgo/experiments/configs/: gnc_experiment.yaml  gradient_experiment.yaml  irls_experiment.yaml  pcm_experiment.yaml
ros_ws/src/kimera_rpgo/include/kimera_rpgo/: rpgo.h
ros_ws/src/kimera_rpgo/include/kimera_rpgo/pcm/: geometry_utils.h  graph_utils.h
ros_ws/src/kimera_rpgo/include/kimera_rpgo/solver/: gnc_solver.h
ros_ws/src/kimera_rpgo/include/kimera_rpgo/utils/: types.h
ros_ws/src/kimera_rpgo/python/: CMakeLists.txt
ros_ws/src/kimera_rpgo/python/bindings/: kimera_rpgo_bindings.cpp
ros_ws/src/kimera_rpgo/python/src/kimera_rpgo/: __init__.py  config_utils.py  utils.py
ros_ws/src/kimera_rpgo/src/: CMakeLists.txt  rpgo.cpp
ros_ws/src/kimera_rpgo/src/pcm/: CMakeLists.txt  geometry_utils.cpp  graph_utils.cpp  pcm.cpp
ros_ws/src/kimera_rpgo/src/pcm/max_clique_finder/: CMakeLists.txt  findClique.cpp  findCliqueHeu.cpp  graphIO.cpp  utils.cpp
ros_ws/src/kimera_rpgo/src/solver/: CMakeLists.txt  gnc_solver.cpp  gradient_solver.cpp  least_squares_solver.cpp  solver.cpp  solver_config.cpp
ros_ws/src/kimera_rpgo/src/utils/: CMakeLists.txt  g2o.cpp  loss_functions.cpp  pose_4dof.cpp  types.cpp  utils.cpp
ros_ws/src/kimera_rpgo/tests/: CMakeLists.txt  test_gnc.cpp  test_gradient_descent.cpp  test_least_squares.cpp  test_pcm.cpp
ros_ws/src/kimera_rpgo/tests/data/: test_2d.g2o  test_2d_robust.g2o  test_3d.g2o  test_3d_robust.g2o
ros_ws/src/log/: latest_build
ros_ws/src/pose_graph_tools/pose_graph_tools/: CMakeLists.txt
ros_ws/src/pose_graph_tools/pose_graph_tools_ros/: CMakeLists.txt  package.xml
ros_ws/src/pose_graph_tools/pose_graph_tools_ros/launch/: posegraph_view.launch.yaml
ros_ws/src/pose_graph_tools/pose_graph_tools_ros/src/: conversions.cpp  visualizer.cpp
ros_ws/src/turtlebot3_control/: package.xml  setup.py
ros_ws/src/turtlebot3_control/turtlebot3_control/: semantic_converter.py  waypoint_controller.py
(+1176 files in other folders)
