<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ianvs</name>
  <version>0.0.0</version>
  <description>ROS2 helper functions</description>
  <maintainer email="na26933@mit.edu">Nathan Hughes</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>cli11</depend>
  <depend>message_filters</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rosbag2_transport</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>pybind11-dev</depend>
  <depend>yaml-cpp</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
