<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kimera_pgmo_ros</name>
  <version>0.0.1</version>
  <description>Kimera PGMO ROS interface</description>
  <maintainer email="yunchang@mit.edu">Yun Chang</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>config_utilities</depend>
  <depend>kimera_pgmo</depend>
  <depend>kimera_pgmo_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pose_graph_tools_ros</depend>
  <depend>rclcpp</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <exec_depend>kimera_pgmo_rviz</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
