<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kimera_pgmo_rviz</name>
  <version>0.0.1</version>
  <description>Kimera PGMO RViz tools</description>
  <maintainer email="yunchang@mit.edu">Yun Chang</maintainer>
  <author email="na26933@mit.edu">Nathan Hughes</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>kimera_pgmo_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rviz_common</depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
